src/test/ui/const-generics/const-param-type-depends-on-const-param.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-const-param.rs:12:52
   |
LL | pub struct Dependent<const N: usize, const X: [u8; N]>([(); N]);
   |                                                    ^ the type must not depend on the parameter `N`

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-const-param.rs:16:40
   |
LL | pub struct SelfDependent<const N: [u8; N]>;
   |                                        ^ the type must not depend on the parameter `N`

error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-type-depends-on-const-param.rs:12:47
   |
LL | pub struct Dependent<const N: usize, const X: [u8; N]>([(); N]);
   |                                               ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-type-depends-on-const-param.rs:16:35
   |
LL | pub struct SelfDependent<const N: [u8; N]>;
   |                                   ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0770`.
